Update graphs image and fix feature punctuation

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <small>beta</small>
             </small>
           </sup></h3>
-          <p class="text-gray-chateau">Download the Android app to view stats on the go</p>
+          <p class="text-gray-chateau">Download the Android app to view stats on the go.</p>
         </div>
       </div>
 
@@ -261,63 +261,63 @@
     <div class="gallery">
 
       <figure>
-        <img src="images/screenshots/activity.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/activity.png" alt="Alt Image Text"/>
         <figcaption>Homepage
           <small>Monitor current activity and statistics from the homepage</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/libraries.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/libraries.png" alt="Alt Image Text"/>
         <figcaption>Libraries
           <small>View the number of media items in your libraries.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/library.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/library.png" alt="Alt Image Text"/>
         <figcaption>Library Statistics
           <small>See detailed statistics about each library.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/media item.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/media item.png" alt="Alt Image Text"/>
         <figcaption>Media Info
           <small>Browse and view info about the media in your Plex libraries.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/users.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/users.png" alt="Alt Image Text"/>
         <figcaption>Users
           <small>Track the activity of your users.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/user info.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/user info.png" alt="Alt Image Text"/>
         <figcaption>User Statistics
           <small>See detailed statistics about each user.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/history.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/history.png" alt="Alt Image Text"/>
         <figcaption>History
           <small>Log detailed watched statistics for all streaming activity.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/graphs.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/graphs.png" alt="Alt Image Text"/>
         <figcaption>Graphs
           <small>Analyze trends on your server using beautiful graphs.</small>
         </figcaption>
       </figure>
 
       <figure>
-        <img src="images/screenshots/notifications.png?v=2" alt="Alt Image Text"/>
+        <img src="images/screenshots/notifications.png" alt="Alt Image Text"/>
         <figcaption>Notification
           <small>Get notified with your favourite notification agents.</small>
         </figcaption>
