Change Custom CSS to bootstrap utilities instead and use standard plex colors for bitcoin modal

--- a/index.html
+++ b/index.html
@@ -344,16 +344,14 @@
       <div class="col-md-4">
         <p class="text-center lead">Tautulli</p>
         <a target="_blank" href="https://github.com/JonnyWong16/plexpy">
-          <img alt='Get it on GitHub' src='images/github_badge.png' class="img-fluid"/>
+          <img alt='Get it on GitHub' src='images/github_badge.png' class="img-fluid mx-auto"/>
         </a>
       </div>
       <div class="col-md-4">
-
         <p class="text-center lead">Tautulli Remote</p>
         <a target="_blank" href='https://play.google.com/store/apps/details?id=com.williamcomartin.plexpyremote'>
-          <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid"/>
+          <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid mx-auto"/>
         </a>
-        <!--<a href="https://play.google.com/store/apps/details?id=com.williamcomartin.plexpyremote&hl=en" class="btn btn-block bg-river-bed text-alabaster hover-bg-shark">Download Android App</a>-->
       </div>
     </div>
 
@@ -368,10 +366,12 @@
       <h2 class="h2 mb-5 text-alabaster text-center">Support</h2>
     </div>
     <div class="row support-button">
+
       <div class="col-md-3">
         <a target="_blank" href="https://github.com/JonnyWong16/plexpy/wiki/Frequently-Asked-Questions-(FAQ)"><i
           class="fa fa-github fa-2x"></i></a>
       </div>
+
       <div class="col-md-3">
         <a target="_blank" href="https://discord.gg/36ggawe"><i class="icon icon-discord fa-2x"></i></a>
       </div>
@@ -379,9 +379,7 @@
       <div class="col-md-3">
         <a target="_blank" href="https://www.reddit.com/r/Tautulli/"><i class="fa fa-reddit-alien fa-2x"></i></a>
       </div>
-      <!--<div class="col-md-3">-->
-      <!--<a target="_blank" href="https://gitter.im/plexpy/general"><i class="icon icon-gitter fa-2x"></i></a>-->
-      <!--</div>-->
+
       <div class="col-md-3">
         <a target="_blank" href="https://forums.plex.tv/discussion/169591/plexpy-another-plex-monitoring-program"><i
           class="icon icon-plex fa-2x"></i></a>
@@ -422,45 +420,18 @@
             <a href="#" data-toggle="modal" data-target="#bitcoin-modal" data-address="38To4y9S2uAHLWcGG7wyNuXQZa2cwwYPGp" 
                class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fa fa-bitcoin"></i> Bitcoin</a>
-            <!--<a target=_blank href="https://flattr.com/profile/williamcomartin"-->
-            <!--class="btn btn-link text-gamboge">-->
-            <!--<i class="fa fa-dollar"></i> Flattr</a>-->
 
           </div>
         </div>
       </div>
     </div>
 
-    <!--<div class="row support-button">-->
-    <!--<div class="col">-->
-    <!--<h3 class="pb-3">Server</h3>-->
-    <!--<div class="row justify-content-md-center">-->
-    <!--<div class="col">-->
-    <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DG783BMSCU3V4"><i class="fa fa-paypal fa-2x"></i></a>-->
-    <!--</div>-->
-    <!--<div class="col">-->
-    <!--<a href="https://www.coinbase.com/JonnyWong16/"><i class="fa fa-bitcoin fa-2x"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col">-->
-    <!--<h3 class="pb-3">Android App</h3>-->
-    <!--<div class="row justify-content-md-center">-->
-    <!--<div class="col">-->
-    <!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"><i class="fa fa-paypal fa-2x"></i></a>-->
-    <!--</div>-->
-    <!--<div class="col">-->
-    <!--<a href="https://flattr.com/profile/williamcomartin"><i class="fa fa-dollar fa-2x"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-
   </div>
   
     <div class="modal fade" id="bitcoin-modal" tabindex="-1" role="dialog" aria-labelledby="bitcoin-modal" aria-hidden="true">
       <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
+        <div class="modal-content bg-shark">
+          <div class="modal-header bg-river-bed border-shark">
             <h5 class="modal-title">Bitcoin Donation</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true"><i class="fa fa-remove"></i></span>
@@ -468,12 +439,12 @@
           </div>
           <div class="modal-body">
             <label>QR Code</label>
-            <pre id="crypto_qr_code" style="text-align: center"></pre>
+            <pre id="crypto_qr_code" class="text-center bg-alabaster rounded p-2"></pre>
             <label>Bitcoin Address</label>
-            <pre id="crypto_address" style="text-align: center"></pre>
+            <pre id="crypto_address" class="text-center bg-alabaster rounded p-2"></pre>
           </div>
-          <div class="modal-footer">
-          </div>
+          <!--<div class="modal-footer">-->
+          <!--</div>-->
         </div>
       </div>
     </div>
