Switch to SVG logos

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body class="bg-shark text-alabaster">
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-black p-3">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-black">
   <div class="container">
-    <a class="navbar-brand" href="#heading"><img src="images/logo-text.png" style="height: 50px;"/></a>
+    <a class="navbar-brand" href="#heading"><embed src="images/logo-tautulli.svg" style="height: 50px;"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -55,7 +55,7 @@
 
 <section id="heading" class="d-flex align-items-center justify-content-center">
   <div class="text-center">
-    <h2 class="display-1" id="heading-name"><img src="images/tautulli.png" /> <span id="heading-plex">for <img src="images/plex-logo-reversed-flat-transparent.png" /></span></h2>
+    <h2 class="display-1" id="heading-name"><embed src="images/tautulli.svg" style="height: 100px;"/> <span id="heading-plex">for <img src="images/plex-logo-reversed-flat-transparent.png" /></span></h2>
     <p class="p-5">Monitor your Plex Media Server</p>
     <p><a href="#download" class="btn bg-gamboge text-alabaster">Get It Now</a></p>
   </div>
@@ -74,7 +74,7 @@
     </div>
     <div class="row">
       <div class="col-md-3 col-lg-2 text-center mb-4">
-        <img src="images/logo.png" alt="member" class="img-fluid">
+        <embed src="images/logo.svg" alt="member" class="img-fluid" style="height: 180px;"/>
       </div>
       <div class="col-md">
 
