Fix navbar logo link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body class="bg-shark text-alabaster">
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-black">
   <div class="container">
-    <a class="navbar-brand" href="#heading"><embed src="images/logo-tautulli.svg" style="height: 50px;"/></a>
+    <a class="navbar-brand svg" href="#heading">
+      <object data="images/logo-tautulli.svg" type="image/svg+xml" style="height: 50px;"></object>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -55,7 +57,10 @@
 
 <section id="heading" class="d-flex align-items-center justify-content-center">
   <div class="text-center">
-    <h2 class="display-1" id="heading-name"><embed src="images/tautulli.svg" style="height: 100px;"/> <span id="heading-plex">for <img src="images/plex-logo-reversed-flat-transparent.png" /></span></h2>
+    <h2 class="display-1" id="heading-name">
+      <object data="images/tautulli.svg" type="image/svg+xml" style="height: 100px;"></object>
+      <span id="heading-plex">for <img src="images/plex-logo-reversed-flat-transparent.png" /></span>
+    </h2>
     <p class="p-5">Monitor your Plex Media Server</p>
     <p><a href="#download" class="btn bg-gamboge text-alabaster">Get It Now</a></p>
   </div>
@@ -74,7 +79,7 @@
     </div>
     <div class="row">
       <div class="col-md-3 col-lg-2 text-center mb-4">
-        <embed src="images/logo.svg" alt="member" class="img-fluid" style="height: 180px;"/>
+        <object data="images/logo.svg" type="image/svg+xml" class="img-fluid" style="height: 180px;"></object>
       </div>
       <div class="col-md">
 
