Add Patreon and Font-Awesome v5

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Meta Description -->
+  <meta name="description" content="A Python based monitoring and tracking tool for Plex Media Server">
+  <meta name="keywords" content="tautulli, plex, monitoring, tracking, stats, notifications, plex monitoring, plex tracking, plex stats, plex notifications">
+  <meta name="author" content="Tautulli">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -92,7 +96,8 @@
           Most importantly, these statistics include <span class="text-gamboge">what</span> has been watched, <span
           class="text-gamboge">who</span> watched it, <span class="text-gamboge">when</span> and <span
           class="text-gamboge">where</span> they watched it, and <span class="text-gamboge">how</span> it was watched.
-          The only thing missing is "why they watched it", but who am I to question your 42 plays of Frozen.
+          The only thing missing is "<span class="text-gamboge">why</span> they watched it", 
+          but who am I to question your 42 plays of <em>Frozen</em>.
           All statistics are presented in a nice and clean interface with many tables and graphs, which makes it easy to
           brag about your server to everyone else.
         </p>
@@ -145,7 +150,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12 text-center">
         <div class="features-item">
           <div class="m-5">
-            <i class="fa fa-bar-chart fa-3x"></i>
+            <i class="fa fa-chart-bar fa-3x"></i>
           </div>
 
           <h3>Graphs</h3>
@@ -182,7 +187,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12 text-center">
         <div class="features-item">
           <div class="m-5">
-            <i class="fa fa-cloud-download fa-3x"></i>
+            <i class="fa fa-cloud-download-alt fa-3x"></i>
           </div>
 
           <h3>Sync</h3>
@@ -229,7 +234,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12 text-center">
         <div class="features-item">
           <div class="m-5">
-            <i class="fa fa-android fa-3x"></i>
+            <i class="fab fa-android fa-3x"></i>
           </div>
 
           <h3>Tautulli Remote <sup>
@@ -372,25 +377,25 @@
       <div class="col-md-3">
         <a target="_blank" href="https://github.com/JonnyWong16/plexpy/wiki/Frequently-Asked-Questions-(FAQ)"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Github FAQ'})">
-          <i class="fa fa-github fa-2x"></i></a>
+          <i class="fab fa-github fa-3x"></i></a>
       </div>
 
       <div class="col-md-3">
         <a target="_blank" href="https://discord.gg/tQcWEUp"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Discord'})">
-          <i class="icon icon-discord fa-2x"></i></a>
+          <i class="fab fa-discord fa-3x"></i></a>
       </div>
 
       <div class="col-md-3">
         <a target="_blank" href="https://www.reddit.com/r/Tautulli/"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Reddit'})">
-          <i class="fa fa-reddit-alien fa-2x"></i></a>
+          <i class="fab fa-reddit-alien fa-3x"></i></a>
       </div>
 
       <div class="col-md-3">
         <a target="_blank" href="https://forums.plex.tv/discussion/169591/plexpy-another-plex-monitoring-program"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Plex Forum'})">
-          <i class="icon icon-plex fa-2x"></i></a>
+          <i class="icon icon-plex fa-3x"></i></a>
       </div>
 
     </div>
@@ -410,14 +415,18 @@
           <div class="card-body">
             <h4 class="card-title">Tautulli</h4>
 
+            <a target="_blank" href="https://www.patreon.com/bePatron?u=10078609"
+               onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Patreon', method: 'Patreon', variant: 'Tautulli'})"
+               class="btn btn-link text-gamboge hover-text-alabaster">
+              <i class="fab fa-patreon"></i> Patreon</a>
             <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=6XPPKTDSX9QFL&lc=US&item_name=Tautulli&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted"
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Paypal', method: 'Paypal', variant: 'Tautulli'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fa fa-paypal"></i> PayPal</a>
+              <i class="fab fa-paypal"></i> PayPal</a>
             <a href="#" data-toggle="modal" data-target="#bitcoin-modal" data-address="3FdfJAyNWU15Sf11U9FTgPHuP1hPz32eEN"
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Bitcoin', method: 'Bitcoin', variant: 'Tautulli'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fa fa-bitcoin"></i> Bitcoin</a>
+              <i class="fab fa-bitcoin"></i> Bitcoin</a>
           </div>
         </div>
         <div class="card bg-shark">
@@ -427,11 +436,11 @@
             <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli Remote - Paypal', method: 'Paypal', variant: 'Tautulli Remote'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fa fa-paypal"></i> PayPal</a>
+              <i class="fab fa-paypal"></i> PayPal</a>
             <a href="#" data-toggle="modal" data-target="#bitcoin-modal" data-address="38To4y9S2uAHLWcGG7wyNuXQZa2cwwYPGp"
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli Remote - Bitcoin', method: 'Bitcoin', variant: 'Tautulli Remote'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fa fa-bitcoin"></i> Bitcoin</a>
+              <i class="fab fa-bitcoin"></i> Bitcoin</a>
 
           </div>
         </div>
@@ -496,7 +505,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
         integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
-<script src="https://use.fontawesome.com/7e4938e866.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 <script src="js/jquery.singlePageNav.min.js"></script>
 <!-- jquery easing -->
 <script src="js/jquery.easing.min.js"></script>
