Add Open Graph tags

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Meta Description -->
-  <meta name="description" content="A Python based monitoring and tracking tool for Plex Media Server">
+  <meta name="description" content="A Python based monitoring and tracking tool for Plex Media Server" property="og:description">
   <meta name="keywords" content="tautulli, plex, monitoring, tracking, stats, notifications, plex monitoring, plex tracking, plex stats, plex notifications">
-  <meta name="author" content="Tautulli">
+  <meta name="author" content="Tautulli" property="og:title">
+  <meta content="Tautulli" property="og:site_name">
+  <meta content="website" property="og:type">
+  <meta content="http://tautulli.com" property="og:url">
+  <meta content="http://tautulli.com/images/logo.png" property="og:image">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
