Update support links

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     <div class="row support-button">
 
       <div class="col-md-3">
-        <a target="_blank" href="https://github.com/JonnyWong16/plexpy/wiki/Frequently-Asked-Questions-(FAQ)"
+        <a target="_blank" href="https://github.com/Tautulli/Tautulli-Wiki/wiki"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Github FAQ'})">
           <i class="fab fa-github fa-3x"></i></a>
       </div>
@@ -397,7 +397,7 @@
       </div>
 
       <div class="col-md-3">
-        <a target="_blank" href="https://forums.plex.tv/discussion/169591/plexpy-another-plex-monitoring-program"
+        <a target="_blank" href="https://forums.plex.tv/discussion/307821/tautulli-monitor-your-plex-media-server"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Plex Forum'})">
           <i class="icon icon-plex fa-3x"></i></a>
       </div>
