Update feature section to include newsletter and remove customization

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           Most importantly, these statistics include <span class="text-gamboge">what</span> has been watched, <span
           class="text-gamboge">who</span> watched it, <span class="text-gamboge">when</span> and <span
           class="text-gamboge">where</span> they watched it, and <span class="text-gamboge">how</span> it was watched.
-          The only thing missing is "<span class="text-gamboge">why</span> they watched it", 
+          The only thing missing is "<span class="text-gamboge">why</span> they watched it",
           but who am I to question your 42 plays of <em>Frozen</em>.
           All statistics are presented in a nice and clean interface with many tables and graphs, which makes it easy to
           brag about your server to everyone else.
@@ -173,7 +173,7 @@
           </div>
 
           <h3>Notifications</h3>
-          <p class="text-gray-chateau">Trigger notifications or scripts from activity on your server.</p>
+          <p class="text-gray-chateau">Trigger notifications or scripts from events on your Plex server.</p>
         </div>
       </div>
 
@@ -184,7 +184,18 @@
           </div>
 
           <h3>Recently Added</h3>
-          <p class="text-gray-chateau">Know when content is added to your Plex library.</p>
+          <p class="text-gray-chateau">Keep track of when content is added to your Plex library.</p>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+        <div class="features-item">
+          <div class="m-5">
+            <i class="far fa-newspaper fa-3x"></i>
+          </div>
+
+          <h3>Newsletters</h3>
+          <p class="text-gray-chateau">Create and send newsletters for recently added media.</p>
         </div>
       </div>
 
@@ -195,10 +206,13 @@
           </div>
 
           <h3>Sync</h3>
-          <p class="text-gray-chateau">View all synced content from your server.</p>
+          <p class="text-gray-chateau">View and delete all synced content from your server.</p>
         </div>
       </div>
 
+    </div>
+
+    <div class="row justify-content-md-center">
       <div class="col-md-3 col-sm-6 col-xs-12 text-center">
         <div class="features-item">
           <div class="m-5">
@@ -206,21 +220,7 @@
           </div>
 
           <h3>Media Info</h3>
-          <p class="text-gray-chateau">See detailed media info for all your content.</p>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="row justify-content-md-center">
-      <div class="col-md-3 col-sm-6 col-xs-12 col-md-offset-3 text-center">
-        <div class="features-item">
-          <div class="m-5">
-            <i class="fa fa-cogs fa-3x"></i>
-          </div>
-
-          <h3>Customizable</h3>
-          <p class="text-gray-chateau">Many settings to make Tautulli work the way you want.</p>
+          <p class="text-gray-chateau">See detailed information on all of your media.</p>
         </div>
       </div>
 
@@ -246,7 +246,7 @@
               <small>beta</small>
             </small>
           </sup></h3>
-          <p class="text-gray-chateau">Download the Android app to view stats on the go.</p>
+          <p class="text-gray-chateau">Download the offical app on Android to view stats on the go.</p>
         </div>
       </div>
 
@@ -452,7 +452,7 @@
     </div>
 
   </div>
-  
+
     <div class="modal fade" id="bitcoin-modal" tabindex="-1" role="dialog" aria-labelledby="bitcoin-modal" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content bg-shark">
@@ -473,7 +473,7 @@
         </div>
       </div>
     </div>
-    
+
 </section>
 
 <footer id="footer" class="p-5 text-gray-chateau">
