Use correct International Phonetic Alphabet symbols for Tautulli pronunciation

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
         <!--<p class="lead">Tautulli is a python based web application for monitoring, analytics, and notifications for your Plex Media Server.</p>-->
-        <p>verb | tau &#x2022; tul &#x2022; li | <code class="bg-shark text-gamboge">\ ˈtau̇-tü-lē \</code> | To watch or monitor</p>
+        <p>verb | tau &#x2022; tul &#x2022; li | <code class="bg-shark text-gamboge">/taʊ'-tu'-liː/</code> | To watch or monitor</p>
         <p>
           Tautulli is a 3rd party application that you can run alongside your Plex Media
           Server to monitor activity and track various statistics.
