Update to HTTPS

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <meta name="author" content="Tautulli" property="og:title">
   <meta content="Tautulli" property="og:site_name">
   <meta content="website" property="og:type">
-  <meta content="http://tautulli.com" property="og:url">
-  <meta content="http://tautulli.com/images/logo.png" property="og:image">
+  <meta content="https://tautulli.com" property="og:url">
+  <meta content="https://tautulli.com/images/logo.png" property="og:image">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="css/plexcolors.css"/>
   <link rel="stylesheet" href="css/iconmoon.min.css"/>
@@ -487,7 +487,7 @@
   </div>
 </footer>
 
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none;">
+<svg xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" style="display:none;">
   <symbol id="close" viewBox="0 0 18 18">
     <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M9,0.493C4.302,0.493,0.493,4.302,0.493,9S4.302,17.507,9,17.507
 			S17.507,13.698,17.507,9S13.698,0.493,9,0.493z M12.491,11.491c0.292,0.296,0.292,0.773,0,1.068c-0.293,0.295-0.767,0.295-1.059,0
