--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 <body class="bg-shark text-alabaster">
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-black">
   <div class="container">
-    <a class="navbar-brand svg" href="index.html">
+    <a class="navbar-brand svg" href="/">
       <object data="images/logo-tautulli.svg" type="image/svg+xml" style="height: 50px;"></object>
     </a>
   </div>
@@ -41,7 +41,7 @@
     <p class="p-5">
         Oops, you seem to have gotten lost. <i class="fas fa-frown"></i>
         <br>
-        <a class="btn btn-link text-gamboge hover-text-alabaster" href="index.html">Click here to return to the homepage.</a>
+        <a class="btn btn-link text-gamboge hover-text-alabaster" href="/">Click here to return to the homepage.</a>
     </p>
   </div>
 </section>
