Update Discord link on homepage

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       </div>
 
       <div class="col-md-3">
-        <a target="_blank" href="https://discord.gg/tQcWEUp"
+        <a target="_blank" href="https://tautulli.com/discord.html"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Discord'})">
           <i class="fab fa-discord fa-3x"></i></a>
       </div>
