Update meta tags for Discord invite

--- a/discord.html
+++ b/discord.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Tautulli - Discord</title>
+  <title>Tautulli - Discord Server</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="0; url=https://discord.gg/tQcWEUp" />
   <!-- Meta Description -->
-  <meta name="description" content="A Python based monitoring and tracking tool for Plex Media Server" property="og:description">
-  <meta name="keywords" content="tautulli, plex, monitoring, tracking, stats, notifications, plex monitoring, plex tracking, plex stats, plex notifications">
+  <meta name="description" content="Join the Tautulli Discord Server for live chat" property="og:description">
+  <meta name="keywords" content="tautulli, plex, monitoring, tracking, stats, notifications, plex monitoring, plex tracking, plex stats, plex notifications, discord">
   <meta name="author" content="Tautulli" property="og:title">
-  <meta content="Tautulli - Discord" property="og:site_name">
+  <meta content="Tautulli - Discord Server" property="og:site_name">
   <meta content="website" property="og:type">
   <meta content="https://tautulli.com/discord" property="og:url">
-  <meta content="https://tautulli.com/images/logo.png" property="og:image">
+  <meta content="https://tautulli.com/images/Discord-Logo-Color.png" property="og:image">
 
   <script type="text/javascript">
     window.location.href = "https://discord.gg/tQcWEUp";
